Add margin space between header and content and footer and content for aesthetics

--- a/404.html
+++ b/404.html
@@ -60,13 +60,14 @@
       </div>
     </nav>
   </header>
+  <div class="mb-1"></div>
   <section>
     <h2 class="align-center pt-4 mt-4">Whoa there! You've come right into a dilemma zone!</h2>
     <p class="align-center"><img src="assets/images/hazard.png" alt="Hazard sign" class="hazard-sign img-fluid"></p>
     <h2 class="align-center">But we have your options covered. </h2>
     <p class="align-center pb-5 mb-5"><a href="index.html"><button class="btn-lg btn-primary"><i class="fas fa-caravan"></i> Take me home</button></a></p>
   </section>
-
+<div class="mb-1"></div>
 
   <!-- Footer -->
   <footer class="mt-7 page-footer font-small darken-3">
