--- a/calculator.html
+++ b/calculator.html
@@ -64,6 +64,7 @@
       </div>
     </nav>
   </header>
+  <div class="mt-1"></div>
   <section class="container">
     <div class="row">
       <div class="col-12  title-div">
@@ -431,7 +432,7 @@
     </div>
 
   </section>
-
+<div class="mb-1"></div>
   <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
