--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,7 @@
       </div>
     </nav>
   </header>
+  <div class="mb-1"></div>
   <section class="container">
     <div class="row">
       <div class="col-12  title-div">
@@ -118,6 +119,7 @@
     </form>
 
   </section>
+  <div class="mb-1"></div>
   <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
