--- a/help.html
+++ b/help.html
@@ -65,6 +65,7 @@
       </div>
     </nav>
   </header>
+  <div class="mb-1"></div>
   <section class="container">
     <div class="row">
       <div class="col-12 title-div">
@@ -411,7 +412,7 @@ This is because the calculation includes some randomness to account for realisti
   </div>
 </div>
 
-
+<div class="mb-1"></div>
   <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
