--- a/index.html
+++ b/index.html
@@ -65,12 +65,17 @@
       </div>
     </nav>
 </header>
+<div class="mb-1"></div>
+<section>
+<h1>This is the heading</h1>
+</section>
 
 <div>
 <br>
 <br>
 <br>
 </div>
+<div class="mb-1"></div>
      <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
