--- a/terms.html
+++ b/terms.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
   </header>
-
+<div class="mb-1"></div>
   <div class="container">
     <h1>Website Terms and Conditions of Use</h1>
 
@@ -139,6 +139,7 @@
     <p>Any claim related to https://pauld0051.github.io/physcis-code/'s 
     Website shall be governed by the laws of se without regards to its conflict of law provisions.</p>
   </div>
+  <div class="mb-1"></div>
   <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
