--- a/privacy.html
+++ b/privacy.html
@@ -65,6 +65,7 @@
       </div>
     </nav>
   </header>
+  <div class="mb-1"></div>
   <div class="container">
     <h1>Privacy Policy</h1>
     <p>https://pauld0051.github.io/physcis-code/</p>
@@ -173,6 +174,7 @@
     child provided this kind of information on our website, we strongly encourage you to contact us immediately
       and we will do our best efforts to promptly remove such information from our records.</p>
   </div>
+  <div class="mb-1"></div>
   <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
