Add index.html template for a landing page

--- a/game.html
+++ b/game.html
@@ -73,7 +73,7 @@
           <h1>Reaction Time Game <i class="fas fa-gamepad"></i></h1>
           <p class="head-text">If you're wanting to test your reaction time for the calculator, you can do so here by playing this game. Just try to hit the
             brakes when the light turns red.</p>
-          <p class="head-text">Because we're dealing with reaction times between the pedals in a car, this test done by hand and mouse or touch screen may not give an
+          <p class="head-text">Because we're dealing with reaction times between the pedals in a car, this test done by mouse or touch screen may not give an
             accurate representation of reaction time. This game tests your reaction time as an estimate only.</p>
           <p class="head-text my-0">Reaction times will vary with age, tiredness, distractions, impairment with alcohol or drugs and many other reasons.</p>
         </div>
