--- a/help.html
+++ b/help.html
@@ -205,8 +205,8 @@
             <p>The coefficient of friction (μ) is a unitless number between 0 and 1. The lowest possible friction would be zero, however, this is not
               logical or plausible in a real world context as this would suggest a complete frictionless system. Conversely, the highest possible friction
               would be one. Again, this would not be plausible as movement would then become impossible. You can estimate μ by using real world data.
-              Good road conditions and good tires on the vehicle could see a range for μ between 0.67 and 0.75. Icy conditions could see μ as low as 0.3. For
-              more data you can check our accepted values here:
+              Good road conditions and good tires on the vehicle could see a range for μ between 0.67 and 0.75. Icy conditions could see μ as low as 0.3. </p>
+              <p>For more data you can check our accepted values here:
               <button type="button" 
               class="btn btn-link" 
               data-toggle="modal" 
