--- a/index.html
+++ b/index.html
@@ -28,14 +28,7 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button 
-      class="navbar-toggler" 
-      type="button" 
-      data-toggle="collapse" 
-      data-target="#navbarNav" 
-      aria-controls="navbarNav" 
-      aria-expanded="false" 
-      aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -64,19 +57,161 @@
         </span>
       </div>
     </nav>
-</header>
-<div class="mb-1"></div>
-<section>
-<h1>This is the heading</h1>
-</section>
+  </header>
+  <div class="mb-1"></div>
+  <section class="container">
+    <div class="row">
+      <div class="col-12 title-div">
+        <div class="container heading-background heading-padding heading-margin-top">
+          <h1>Welcome to Physics Code <i class="fab fa-product-hunt"></i></h1>
+          <h4>A free web resource for Physics students.</h4>
+          <p class="head-text">Whether you're here as a teacher or a student, at university, college or high school, Physics Code can help provide
+            a level of detail and knowledge that was once thought to only be available in textbooks. Each problem has a bite sized step towards a solution
+            that is differentiated for everyone. As more calculators and help pages come online, you will be guided through every step of solving the problem
+            regardless of your level in Physics.</p>
+          <p class="head-text">New calculators and help files are added regularly and you have the option to request new calculators through
+            our <a href="contact.html" target="_blank" class="info-icon">Contact Us <i class="fas fa-envelope-open"></i></a> page.</p>
+          <p class="head-text">Find your learning curve and nurture it, but always nurture your learning on the edge of your comfort zone.</p>
+          <p class="head-text my-0 text-center"><em>"The first principle is that you must not fool yourself and you are the easiest person to fool."</em> Richard Feynman</p>
+        </div>
+      </div>
+    </div>
 
-<div>
-<br>
-<br>
-<br>
+  </section>
+
+  <section class="container">
+    <div class="row">
+      <div class="col-12 title-div">
+        <div class="container heading-background heading-padding heading-margin">
+          <h2>Choose your weapon!</h2>
+          <p class="card-text">
+            Are you looking for a particular calculator? Help on a problem? Or do you just want to reach out? Choose where you want to go to next...
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container">
+
+    <div class="row">
+      <!-- Row One Calculators, Help and Games -->
+      <div class="col-lg-4 content-div">
+        <div class="card shadow text-center">
+          <i class="fas fa-calculator fa-5x icon-center"></i>
+          <div class="card-body">
+            <h5 class="card-title">Calculators</h5>
+            <br>
+            <div class="dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Calculators
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="calculator.html">Dilemma Zone Calculator</a>
+                <a class="dropdown-item">More coming soon</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 content-div">
+        <div class="card shadow text-center">
+          <i class="fas fa-info-circle fa-5x icon-center"></i>
+          <div class="card-body">
+            <h5 class="card-title">Help</h5>
+            <br>
+            <div class="dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Help Pages
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="help.html">Dilemma Zone Help</a>
+                <a class="dropdown-item">More coming soon</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 content-div">
+        <div class="card shadow text-center">
+          <i class="fas fa-gamepad fa-5x icon-center"></i>
+          <div class="card-body">
+            <h5 class="card-title">Games</h5>
+            <br>
+            <div class="dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Games
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="game.html">Reaction Time Game</a>
+                <a class="dropdown-item">More coming soon</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row pb-3 content-div"></div>
+
+    <div class="row">
+
+      <!-- Row two Test Yourself and Contact Us -->
+      <div class="col-lg-6 content-div">
+        <div class="card shadow text-center">
+          <i class="fas fa-pencil-ruler fa-5x icon-center"></i>
+          <div class="card-body">
+            <h5 class="card-title">Test Yourself</h5>
+            <br>
+            <div class="dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Test yourself
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="test_yourself.html">Dilemma Zone Tests</a>
+                <a class="dropdown-item">More coming soon</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 content-div">
+        <div class="card shadow text-center">
+          <i class="fas fa-envelope-open fa-5x icon-center"></i>
+          <div class="card-body">
+            <h5 class="card-title">Contact Us</h5>
+            <br>
+            <a href="contact.html">
+              <p>Send us your ideas</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About the author -->
+  <section>
+<div class="container">
+<div class="row pb-3"></div>
+<div class="row">
+<div class="media">
+  <img class="align-self-center author-img mr-3 img-fluid" src="assets/images/author-questions.png" alt="The author">
+  <div class="media-body">
+    <h5 class="mt-0">About the author</h5>
+    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+  </div>
 </div>
-<div class="mb-1"></div>
-     <!-- Footer -->
+</div>
+</div>
+
+  </section>
+
+  <div class="mb-1"></div>
+  <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
     <!-- Footer Elements -->
@@ -122,8 +257,7 @@
     <!-- Copyrightand Facebook Share -->
     <div class="container text-center">
       <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
-        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
-        class="fb-xfbml-parse-ignore">Share</a></div>
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
 
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
@@ -135,7 +269,6 @@
 
   </footer>
   <!-- Footer -->
-
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
