--- a/privacy.html
+++ b/privacy.html
@@ -68,9 +68,9 @@
   <div class="mb-1"></div>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p>https://pauld0051.github.io/physcis-code/</p>
+    <p>https://pauld0051.github.io/physics-code/</p>
 
-    <p>At Physics Code, accessible from https://pauld0051.github.io/physcis-code/, 
+    <p>At Physics Code, accessible from https://pauld0051.github.io/physics-code/, 
     one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is 
     collected and recorded by Physics Code
       and how we use it.</p>
