Add buttons and dropdowns for index.html cards to the other on site pages

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h5 class="card-title">Calculators</h5>
             <br>
             <div class="dropdown show">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Calculators
               </a>
               <div class="dropdown-menu">
@@ -121,7 +121,7 @@
             <h5 class="card-title">Help</h5>
             <br>
             <div class="dropdown show">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Help Pages
               </a>
               <div class="dropdown-menu">
@@ -140,7 +140,7 @@
             <h5 class="card-title">Games</h5>
             <br>
             <div class="dropdown show">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Games
               </a>
               <div class="dropdown-menu">
@@ -165,7 +165,7 @@
             <h5 class="card-title">Test Yourself</h5>
             <br>
             <div class="dropdown show">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Test yourself
               </a>
               <div class="dropdown-menu">
@@ -184,7 +184,7 @@
             <h5 class="card-title">Contact Us</h5>
             <br>
             <a href="contact.html">
-              <p>Send us your ideas</p>
+              <p class="btn dropdown--color">Send us your ideas <i class="fas fa-paper-plane"></i></p>
             </a>
           </div>
         </div>
@@ -196,13 +196,14 @@
   <section>
 <div class="container">
 <div class="row pb-3"></div>
-<div class="row">
+<div class="row pb-2">
 <div class="media">
   <img class="align-self-center author-img mr-3 img-fluid" src="assets/images/author-questions.png" alt="The author">
   <div class="media-body">
-    <h5 class="mt-0">About the author</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
+    <p>Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national curriculms of New Zealand, Australia and Sweden.</p>
+    <p class="mb-0">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's 
+    passion for differentiation and full classroom inclusion with easy, self guided instruction, and Physics Code is born.</p>
   </div>
 </div>
 </div>
