--- a/calculator.html
+++ b/calculator.html
@@ -82,7 +82,6 @@
       </div>
     </div>
 
-
   </section>
   <!--Cards for variable inputs-->
   <section class="container">
@@ -118,10 +117,10 @@
               <br>
               <label for="initialVelocity">Velocity</label><br>
               <input 
-              type="number" 
+              type="text" 
               name="inputVelocity" 
               onkeypress="return isNumberKey(event)" 
-              onkeyup="return truncateDecimals(this, 2)" 
+              oninput="validate(this)" 
               id="initialVelocity" 
               class="reset_form" 
               value="10" 
@@ -155,10 +154,10 @@
               <br>
               <label for="yellowPhase">Time of yellow phase in seconds</label><br>
               <input 
-              type="number" 
+              type="text" 
               name="inputYellowPhase" 
               onkeypress="return isNumberKey(event)" 
-              onkeyup="return truncateDecimals(this, 2)" 
+              oninput="validate(this)" 
               id="yellowPhase" 
               class="reset_form" 
               value="4" 
@@ -190,10 +189,10 @@
               <br>
               <label for="interPhase">Time of interphase in seconds</label><br>
               <input 
-              type="number" 
+              type="text" 
               name="inputInterPhase" 
               onkeypress="return isNumberKey(event)" 
-              onkeyup="return truncateDecimals(this, 2)"  
+              oninput="validate(this)"   
               id="interPhase" 
               class="reset_form" 
               value="2" 
@@ -241,10 +240,10 @@
               <br>
               <label for="reactionTime">Reaction time in seconds</label><br>
               <input 
-              type="number" 
+              type="text" 
               name="inputReactionTime" 
               onkeypress="return isNumberKey(event)" 
-              onkeyup="return truncateDecimals(this, 3)"  
+              oninput="validate(this)"   
               id="reactionTime" 
               class="reset_form" 
               value="1" 
@@ -273,9 +272,9 @@
               <br>
               <label for="friction">Coefficient of friction</label><br>
               <input 
-              type="number" 
+              type="text" 
               onkeypress="return isNumberKey(event)" 
-              onkeyup="return truncateDecimals(this, 2)"  
+              oninput="validate(this)"  
               id="friction" 
               class="reset_form" 
               value="0.8" 
@@ -300,9 +299,9 @@
               <br>
               <label for="intersectionDistance">Length of intersection</label><br>
               <input 
-              type="number" 
+              type="text" 
               onkeypress="return isNumberKey(event)" 
-              onkeyup="return truncateDecimals(this, 2)"  
+              oninput="validate(this)"   
               id="intersectionDistance" 
               class="reset_form" 
               value="40" 
@@ -351,9 +350,9 @@
               <br>
               <label for="length">Length of vehicle (m)</label><br>
               <input 
-              type="number" 
+              type="text" 
               onkeypress="return isNumberKey(event)" 
-              onkeyup="return truncateDecimals(this, 2)"  
+              oninput="validate(this)"  
               id="length" 
               class="reset_form" 
               value="4.5" 
@@ -390,9 +389,10 @@
             <h5 class="modal-title" 
             id="zone_header"></h5><span 
             id="dilemmaZoneIcon" 
-            class="icon_hide_dilemmazone dz-icon">
+            class="icon_hide_dilemmazone dz-icon ml-auto">
             <i class="fas fa-exclamation-triangle"></i></span>
-            <span id="optionZoneIcon" class="icon_hide_optionzone oz-icon">
+            <span id="optionZoneIcon" 
+            class="icon_hide_optionzone oz-icon ml-auto">
             <i class="far fa-check-square"></i></span>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
