Fix author image on mobile screens and large screens

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           <p class="head-text">New calculators and help files are added regularly and you have the option to request new calculators through
             our <a href="contact.html" target="_blank" class="info-icon">Contact Us <i class="fas fa-envelope-open"></i></a> page.</p>
           <p class="head-text">Find your learning curve and nurture it, but always nurture your learning on the edge of your comfort zone.</p>
-          <p class="head-text my-0 text-center"><em>"The first principle is that you must not fool yourself and you are the easiest person to fool."</em> Richard Feynman</p>
+          <p class="head-text my-0 text-center"><em>"The first principle is that you must not fool yourself and you are the easiest person to fool."</em></p>
+          <p class="head-text my-0 text-center">Richard Feynman</p>
         </div>
       </div>
     </div>
@@ -100,10 +101,10 @@
         <div class="card shadow text-center">
           <i class="fas fa-calculator fa-5x icon-center"></i>
           <div class="card-body">
-            <h5 class="card-title">Calculators</h5>
+            <h5 class="card-title">Calculators <span class="badge badge-pill badge-danger"><i class="fas fa-meteor"></i> New</span></h5>
             <br>
             <div class="dropdown show">
-              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Calculators
               </a>
               <div class="dropdown-menu">
@@ -121,7 +122,7 @@
             <h5 class="card-title">Help</h5>
             <br>
             <div class="dropdown show">
-              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Help Pages
               </a>
               <div class="dropdown-menu">
@@ -137,10 +138,10 @@
         <div class="card shadow text-center">
           <i class="fas fa-gamepad fa-5x icon-center"></i>
           <div class="card-body">
-            <h5 class="card-title">Games</h5>
+            <h5 class="card-title">Games <span class="badge badge-pill badge-danger"><i class="fas fa-play-circle"></i> Try it!</span></h5>
             <br>
             <div class="dropdown show">
-              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Games
               </a>
               <div class="dropdown-menu">
@@ -162,10 +163,10 @@
         <div class="card shadow text-center">
           <i class="fas fa-pencil-ruler fa-5x icon-center"></i>
           <div class="card-body">
-            <h5 class="card-title">Test Yourself</h5>
+            <h5 class="card-title">Test Yourself <span class="badge badge-pill badge-danger"><i class="fas fa-meteor"></i> New</span></h5>
             <br>
             <div class="dropdown show">
-              <a class="btn dropdown--color dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown--color dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Test yourself
               </a>
               <div class="dropdown-menu">
@@ -198,9 +199,10 @@
 <div class="row pb-3"></div>
 <div class="row pb-2">
 <div class="media">
-  <img class="align-self-center author-img mr-3 img-fluid" src="assets/images/author-questions.png" alt="The author">
+  <img class="align-self-center author-img mr-3 img-fluid d-sm-none d-md-block" src="assets/images/author-questions.png" alt="The author">
   <div class="media-body">
     <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
+    <img class="mx-auto author-img mr-3 img-fluid d-none d-sm-block d-md-none" src="assets/images/author-questions.png" alt="The author">
     <p>Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national curriculms of New Zealand, Australia and Sweden.</p>
     <p class="mb-0">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's 
     passion for differentiation and full classroom inclusion with easy, self guided instruction, and Physics Code is born.</p>
