Fix final equation in mathjax on help.html to fit on one line per equation on large decives

--- a/index.html
+++ b/index.html
@@ -199,9 +199,11 @@
 <div class="row pb-3"></div>
 <div class="row pb-2">
 <div class="media">
+<!-- Author image appears on the left on medium and large devices -->
   <img class="align-self-center author-img mr-3 img-fluid d-sm-none d-md-block" src="assets/images/author-questions.png" alt="The author">
   <div class="media-body">
     <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
+    <!-- Author image appears under header on small devices -->
     <img class="mx-auto author-img mr-3 img-fluid d-none d-sm-block d-md-none" src="assets/images/author-questions.png" alt="The author">
     <p>Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national curriculms of New Zealand, Australia and Sweden.</p>
     <p class="mb-0">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's 
