--- a/help.html
+++ b/help.html
@@ -294,11 +294,21 @@
       </div>
       <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-final">
-          <div class="card-body">
+        <!-- Equation appears on two lines for small devices -->
+          <div class="card-body d-none d-sm-block d-md-none">
             <p>The final equation requires all the inputs for each variable.
               \[dist_{final} =\] \[{ dist_{total} - dist_{intersection} - length}\]
               \[dist_{stopping} = { velocity^2 \over 2 \; μ \; g}\]
               \[zone =\] \[{dist_{final} - (dist_{stopping} + dist_{reaction})}\]
+              Where g = 9.81 ms<sup>-2</sup></p>
+            <p>If <em>zone</em> is negative, then a dilemma zone exists. If <em>zone</em> is positive, then an option zone exists.</p>
+          </div>
+          <div class="card-body d-sm-none d-md-block">
+          <!-- Equation appears on one line for medium and large devices -->
+            <p>The final equation requires all the inputs for each variable.
+              \[dist_{final} = { dist_{total} - dist_{intersection} - length}\]
+              \[dist_{stopping} = { velocity^2 \over 2 \; μ \; g}\]
+              \[zone = {dist_{final} - (dist_{stopping} + dist_{reaction})}\]
               Where g = 9.81 ms<sup>-2</sup></p>
             <p>If <em>zone</em> is negative, then a dilemma zone exists. If <em>zone</em> is positive, then an option zone exists.</p>
           </div>
